[gd_scene load_steps=6 format=2]

[ext_resource path="res://content/weapons/artillery/Grenade.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Weapons/artillery/Retro Weapon Gun LoFi 06.wav" type="AudioStream" id=2]
[ext_resource path="res://content/weapons/artillery/projectile.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 46.0435

[node name="Grenade" type="Area2D"]
z_index = 100
collision_layer = 0
collision_mask = 131072
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Explosion" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 2.6, 2.6 )
color = Color( 0.886275, 0.12549, 0.12549, 0.756863 )
polygon = PoolVector2Array( -16, -8, -18, 0, -17, 6, -13, 13, -6, 17, 3, 18, 9, 16, 15, 10, 18, 3, 17, -5, 14, -12, 8, -16, 2, -18, -4, -18, -10, -15 )

[node name="Impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
bus = "Sounds"

[connection signal="area_entered" from="." to="." method="_on_Grenade_area_entered"]
[connection signal="area_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_area_entered"]
[connection signal="area_exited" from="ExplosionArea" to="." method="_on_ExplosionArea_area_exited"]
[connection signal="finished" from="Impact" to="." method="_on_Impact_finished"]
